improved main learing view
